external-crates/move/move-compiler/tests/move_2024/parser/invalid_positional_struct_unpack_deeply_nested.exp
error[E03013]: positional call mismatch
   ┌─ tests/move_2024/parser/invalid_positional_struct_unpack_deeply_nested.move:27:13
   │
27 │         let Bar(Foo(Bar(Foo(x, y)), z)) = y;
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid deconstruction. Named struct field declarations require named deconstruction

error[E04016]: too few arguments
   ┌─ tests/move_2024/parser/invalid_positional_struct_unpack_deeply_nested.move:27:13
   │
27 │         let Bar(Foo(Bar(Foo(x, y)), z)) = y;
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing binding for field 'f' in '0x42::M::Bar'

error[E03010]: unbound field
   ┌─ tests/move_2024/parser/invalid_positional_struct_unpack_deeply_nested.move:27:13
   │
27 │         let Bar(Foo(Bar(Foo(x, y)), z)) = y;
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unbound field '0' in '0x42::M::Bar'

error[E03013]: positional call mismatch
   ┌─ tests/move_2024/parser/invalid_positional_struct_unpack_deeply_nested.move:27:21
   │
27 │         let Bar(Foo(Bar(Foo(x, y)), z)) = y;
   │                     ^^^^^^^^^^^^^^ Invalid deconstruction. Named struct field declarations require named deconstruction

error[E04016]: too few arguments
   ┌─ tests/move_2024/parser/invalid_positional_struct_unpack_deeply_nested.move:27:21
   │
27 │         let Bar(Foo(Bar(Foo(x, y)), z)) = y;
   │                     ^^^^^^^^^^^^^^ Missing binding for field 'f' in '0x42::M::Bar'

error[E03010]: unbound field
   ┌─ tests/move_2024/parser/invalid_positional_struct_unpack_deeply_nested.move:27:21
   │
27 │         let Bar(Foo(Bar(Foo(x, y)), z)) = y;
   │                     ^^^^^^^^^^^^^^ Unbound field '0' in '0x42::M::Bar'

error[E04010]: cannot infer type
   ┌─ tests/move_2024/parser/invalid_positional_struct_unpack_deeply_nested.move:27:21
   │
27 │         let Bar(Foo(Bar(Foo(x, y)), z)) = y;
   │                     ^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation

